--- a/src/engineResources/CreationOrModify.properties
+++ b/src/engineResources/CreationOrModify.properties
@@ -1,3 +1,9 @@
+#
+# Used within DataController for Reflection to locate the methods being used
+#
 CreateActor=createGameObject
 CreateLevel=createLevel
 CreateScene=createScene
+ModifyActor=modifyGameObject
+ModifyLevel=modifyLevel
+ModifyScene=modifyScene
