--- a/src/engineResources/CreationOrModify.properties
+++ b/src/engineResources/CreationOrModify.properties
@@ -1,9 +1,14 @@
 #
 # Used within DataController for Reflection to locate the methods being used
 #
-CreateActor=createGameObject
-CreateLevel=createLevel
-CreateScene=createScene
-ModifyActor=modifyGameObject
-ModifyLevel=modifyLevel
-ModifyScene=modifyScene
+CreateActor=callFactoryToProcess
+CreateLevel=callFactoryToProcess
+CreateScene=callFactoryToProcess
+ModifyActor=callFactoryToProcess
+ModifyLevel=callFactoryToProcess
+ModifyScene=callFactoryToProcess
+SwitchLevel=switchToLevel
+SwitchScene=switchToScene
+#
+# Used for levels and scenes
+#
