--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -4,9 +4,7 @@
 CreatePlayer=engine.GameEngine.createPlayer
 CreateActor=engine.GameEngine.createActor
 CreateBackground=engine.GameEngine.createBackground
-SwitchLevel=engine.GameEngine.switchLevel
-SwitchScene=engine.GameEngine.switchScene
-CreateLevel=engine.GameEngine.createLevel
+CreateLevel=stage.Game.createLevel
 #
 # Modify order path
 #
