Factory working version 1

--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -1,9 +1,9 @@
 #
 # Data Format to facilitate Data-Driven-Design 
 #
-ModifyActor=ID,IntegerToken,Position,DoubleToken,DoubleToken
-CreateActor=ID,IntegerToken,Color,StringToken
-Background=ID,IntegerToken,Image,StringToken
+ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
+CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken
+Background=TypeToken,ParameterToken,TypeToken,ParameterToken
 #
 # Ways of Die
 #
