--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -4,7 +4,7 @@
 CreatePlayer=engine.GameEngine.createPlayer
 CreateActor=engine.GameEngine.createActor
 CreateBackground=engine.GameEngine.createBackground
-CreateLevel=stage.Game.createLevel
+CreateLevel=game.Game.createLevel
 #
 # Modify order path
 #
