--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -5,6 +5,7 @@ CreatePlayer=engine.GameEngine.createPlayer
 CreateActor=engine.GameEngine.createActor
 CreateBackground=engine.GameEngine.createBackground
 CreateLevel=game.Game.createLevel
+CreateScene=
 #
 # Modify order path
 #
