property file modified

--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -1,11 +1,11 @@
 # Data Driven Design to indicate the class path on which it reflect on
 #
 # Create order path 
-CreatePlayer=engine.GameEngine.createPlayer
-CreateActor=engine.GameEngine.createActor
-CreateBackground=engine.GameEngine.createBackground
-CreateLevel=game.Game.createLevel
-CreateScene=
+CreatePlayer=createPlayer
+CreateActor=createActor
+CreateBackground=createBackground
+CreateLevel=createLevel
+CreateScene=createScene
 #
 # Modify order path
 #
