--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -11,3 +11,9 @@ RegularMove=behaviors.Move
 # Ways of Collision
 #
 HitterEliminateVictim=behaviors.Eliminate
+PerishTogether=behaviors.PerishTogether
+#
+# Ways of Jump
+#
+Jump=behaviors.Jump
+CanNotJump=behaviors.NonJumpable
