--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -1,14 +1,25 @@
 # Data Driven Design to indicate the class path on which it reflect on
 #
-# Create order path 
+# order path through Engine 
 CreatePlayer=createPlayer
 CreateActor=createActor
-CreateBackground=createBackground
-CreateLevel=createLevel
-CreateScene=createScene
+Background=createBackground
+ModifyBackground=
+ModifyGoalManager=modifyGoalManager
+ModifyScoreManager=
+ModifyTimerManager=
+ModifyInputManager=
+# SwitchScene order processed in DC
+# SwitchLevel order processed in DC
 #
-# Modify order path
+# order path through specific class
 #
+ModifyPlayer
 ModifyActor=modifyActor
 ModifyLevel=modifyLevel
 ModifyScene=modifyScene
+CreateLevel=addLevel
+CreateLevel=createLevel
+CreateScene=createScene
+
+
