Game Factory working

--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -1,21 +1,21 @@
 # Data Driven Design to indicate the class path on which it reflect on
 #
 # order path through Engine 
-CreatePlayer=createPlayer
-CreateActor=createActor
-Background=createBackground
+CreatePlayer=Engine,createPlayer,null,0
+CreateActor=createActor,null
+Background=createBackground,null 
 ModifyBackground=
 ModifyGoalManager=modifyGoalManager
 ModifyScoreManager=
 ModifyTimerManager=
 ModifyInputManager=
-# SwitchScene order processed in DC
-# SwitchLevel order processed in DC
 #
-# order path through specific class
+# SwitchScene, SwitchLevel order processed in DC
+#
+# order path through specific class (after you have retrieved the instance of object using (using reflection, too) 
 #
 ModifyPlayer
-ModifyActor=modifyActor
+ModifyActor=Game,modifyActor,getGameObject,3
 ModifyLevel=modifyLevel
 ModifyScene=modifyScene
 CreateLevel=addLevel
