--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -9,8 +9,9 @@ ModifyGoalManager=modifyGoalManager
 ModifyScoreManager=
 ModifyTimerManager=
 ModifyInputManager=
+SwitchScene=
+SwitchLevel=
 #
-# SwitchScene, SwitchLevel order processed in DC
 #
 # order path through specific class (after you have retrieved the instance of object using (using reflection, too) 
 #
