--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -1,7 +1,7 @@
 # Data Driven Design to indicate the class path on which it reflect on
 #
 # order path through Engine 
-CreatePlayer=Engine,createPlayer,null,0
+CreatePlayer=Engine,createPlayer,"",0
 CreateActor=createActor,null
 Background=createBackground,null 
 ModifyBackground=
