--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -1,6 +1,7 @@
 #
 # Data Format to facilitate Data-Driven-Design 
 #
+# "CreatePlayer","ID",7,"Image","actor_default","position",20.0,30.0,"Name","myPlayer","CollisionID",0
 CreatePlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
 CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
 ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
