factory fully working

--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -2,7 +2,7 @@
 #
 # order path through Engine 
 CreatePlayer=Engine,createPlayer,"",0
-CreateActor=createActor,null
+CreateActor=Engine,createActor,"",0
 Background=createBackground,null 
 ModifyBackground=
 ModifyGoalManager=modifyGoalManager
