update constants and tests

--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -33,5 +33,5 @@ InitialScore=IntegerToken
 SetTimeToState=StringToken,IntegerToken
 SceneID=InterToken
 DeleteLevel=NullToken
-ResetLevelID=NullToken
+ResetLevelID=IntegerToken
 DeleteScene=NullToken
