--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -10,13 +10,18 @@ ModifyScoreManager=Engine
 ModifyTimerManager=Engine
 ModifyInputManager=Engine
 SwitchScene=Engine
-# modify actor image
-# ModifyActor=Engine	integerToken (ID)	Image	StringToken (url)
+# Engine Not implemented Yet
+ModifyActorImage=Engine 
 #
+# difficult situation:
+#
+ModifyActor	ID	IntegerToken (ID)	Speed	DoubleToken (speed)
+ModifyActor	ID	IntegerToken (ID)	ChangeToID	IntegerToken
+ModifyActor	ID	IntegerToken (ID)	ChangeCollisionID	IntegerToken
 #
 # order path through specific class (after you have retrieved the instance of object using (using reflection, too) 
 #
-ModifyPlayer
+ModifyPlayer=Game,modifyPlayer,getGameObject,3
 ModifyActor=Game,modifyActor,getGameObject,3
 ModifyLevel=modifyLevel
 ModifyScene=modifyScene
