--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -17,3 +17,7 @@ PerishTogether=behaviors.PerishTogether
 #
 Jump=behaviors.Jump
 CanNotJump=behaviors.NonJumpable
+#
+# Ways of Tile Collision
+#
+StickToTile=behaviors.StickToTile
