--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -20,4 +20,4 @@ CanNotJump=behaviors.NonJumpable
 #
 # Ways of Tile Collision
 #
-StickToTile=behaviors.StickToTile
+StayOnTile=behaviors.StayOnTile
