--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -2,19 +2,14 @@
 # Data Format to facilitate Data-Driven-Design 
 #
 # "CreatePlayer","ID",7,"Image","actor_default","position",20.0,30.0,"Name","myPlayer","CollisionID",0
-CreatePlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
-CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
-ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
+CreatePlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
+CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
+ModifyPlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
+ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
 Background=TypeToken,ParameterToken,TypeToken,ParameterToken
 # Here change actor's image (need to go through Engine)
-ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken
+# ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken
 SwitchScene=TypeToken,ParameterToken,TypeToken,ParameterToken
-#
-# difficult situation:
-#
-ModifyActor	ID	IntegerToken (ID)	Speed	DoubleToken (speed)
-ModifyActor	ID	IntegerToken (ID)	ChangeToID	IntegerToken
-ModifyActor	ID	IntegerToken (ID)	ChangeCollisionID	IntegerToken
 # 
 # Detailed Data Format
 # 
