--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -1,9 +1,9 @@
 # Data Driven Design to indicate the class path on which it reflect on
 #
 # order path through Engine 
-CreatePlayer=Engine,createPlayer,"",0
-CreateActor=Engine,createActor,"",0
-Background=Engine,createBackground,"",0 
+CreatePlayer=Engine,"",0
+CreateActor=Engine,"",0
+Background=Engine,"",0 
 ModifyBackground=Engine
 ModifyGoalManager=modifyGoalManager
 ModifyScoreManager=Engine
@@ -13,16 +13,10 @@ SwitchScene=Engine
 # Engine Not implemented Yet
 ModifyActorImage=Engine 
 #
-# difficult situation:
-#
-ModifyActor	ID	IntegerToken (ID)	Speed	DoubleToken (speed)
-ModifyActor	ID	IntegerToken (ID)	ChangeToID	IntegerToken
-ModifyActor	ID	IntegerToken (ID)	ChangeCollisionID	IntegerToken
-#
 # order path through specific class (after you have retrieved the instance of object using (using reflection, too) 
 #
-ModifyPlayer=Game,modifyPlayer,getGameObject,3
-ModifyActor=Game,modifyActor,getGameObject,3
+ModifyPlayer=Game,getPlayer,2
+ModifyActor=Game,getNonPlayer,2
 ModifyLevel=modifyLevel
 ModifyScene=modifyScene
 CreateLevel=addLevel
