--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -1,9 +1,8 @@
-#
+# 
 # Data Format to facilitate Data-Driven-Design 
-#
-# "CreatePlayer","ID",7,"Image","actor_default","position",20.0,30.0,"Name","myPlayer","CollisionID",0,"live",1
-CreatePlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
-CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
+# "CreatePlayer","ID",7,"Image","actor_default","3","3","position",20.0,30.0,"Name","myPlayer","CollisionID",0,"live",1
+CreatePlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
+CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
 ModifyPlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
 ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
 Background=TypeToken,ParameterToken,TypeToken,ParameterToken
