actor player 100% alll order implemented

--- a/src/engineResources/TypeMethodMatcher.properties
+++ b/src/engineResources/TypeMethodMatcher.properties
@@ -12,8 +12,9 @@ Die=setDieBehavior
 # DeleteLevel calls removeLevel from Game
 DeleteLevel=removeLevel
 ResetLevelID=resetID
-# ID here is createScene, and from Game
-ID=addScene
+# here is createScene, and from Game
+LevelID=addLevel
+SceneID=addScene
 DeleteScene=removeScene
 Background=createBackground
 # setPlayerInitPosition is a method in the scene
