--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -5,10 +5,17 @@ CreatePlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,Pa
 CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
 ModifyPlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
 ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
+#NOTE: will implement below when Game/Engine is ready
+DeleteActor=TypeToken,ParameterToken
 Background=TypeToken,ParameterToken,TypeToken,ParameterToken
 # Here change actor's image (need to go through Engine)
 # ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken
+CreateLevel=TypeToken,ParameterToken
+ModifyLevel=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
+CreateScene=TypeToken,ParameterToken,TypeToken,ParameterToken
 SwitchScene=TypeToken,ParameterToken,TypeToken,ParameterToken
+ModifyScene=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
+
 # 
 # Detailed Data Format
 # 
