--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -1,5 +1,6 @@
 # Data Driven Design to indicate the class path on which it reflect on
 #
+# Reflection thru EngineReflect
 # order path through Engine 
 CreatePlayer=Engine,"",0
 CreateActor=Engine,"",0
@@ -10,15 +11,16 @@ ModifyScoreManager=Engine
 ModifyTimerManager=Engine
 ModifyInputManager=Engine
 SwitchScene=Engine
-# Engine Not implemented Yet
+# Here Engine Function Not implemented Yet
 ModifyActorImage=Engine 
-#
-# order path through specific class (after you have retrieved the instance of object using (using reflection, too) 
+# Reflection thru GameReflect
+# order path through specific class (after you have retrieved the instance of object using (using reflection, too)) 
 #
 ModifyPlayer=Game,getPlayer,2
 ModifyActor=Game,getNonPlayer,2
-ModifyLevel=modifyLevel
+ModifyLevel=Game,modifyLevel
 ModifyScene=modifyScene
-CreateLevel=addLevel
-CreateLevel=createLevel
-CreateScene=createScene
+CreateLevel=Game,getGame,0
+CreateScene=Game,getGame,1
+#note: discuss tmr 
+#	CreateLevel=Engine
