--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -7,13 +7,17 @@ CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,Paramete
 ModifyPlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
 ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
 Background=TypeToken,ParameterToken,TypeToken,ParameterToken
+ModifyActorImage=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
+DeleteActor=TypeToken,ParameterToken
 # Here change actor's image (need to go through Engine)
 # ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken
 SwitchScene=TypeToken,ParameterToken,TypeToken,ParameterToken
+CreateLevel=TypeToken,ParameterToken
+CreateScene=TypeToken,ParameterToken,TypeToken,ParameterToken
 # 
 # Detailed Data Format
 # 
-Image=StringToken
+Image=StringToken,IntegerToken,IntegerToken
 ChangeToID=IntegerToken
 ChangeCollisionID=IntegerToken
 Position=DoubleToken,DoubleToken
