--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -22,7 +22,10 @@ ModifyScene=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
 # 
 Image=StringToken,IntegerToken,IntegerToken
 PlayerImage=StringToken,IntegerToken,IntegerToken
+ActorImage=StringToken,IntegerToken,IntegerToken
+TileCollision=StringToken,IntegerToken
 Lives=IntegerToken
+Speed=DoubleToken,DoubleToken
 ChangeToID=IntegerToken
 ChangeCollisionID=IntegerToken
 Position=DoubleToken,DoubleToken
