--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -21,3 +21,7 @@ CanNotJump=behaviors.NonJumpable
 # Ways of Tile Collision
 #
 StayOnTile=behaviors.StayOnTile
+#
+# Ways of Shoot
+#
+SlowShoot=behaviors.SlowShoot
