update properties file

--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -49,3 +49,17 @@ SceneID=InterToken
 DeleteLevel=NullToken
 ResetLevelID=IntegerToken
 DeleteScene=NullToken
+#
+#
+#
+Explode=StringToken,IntegerToken,StringToken,IntegerToken,IntegerToken
+HitterEliminateVictim=StringToken,IntegerToken
+PerishTogether=StringToken,IntegerToken
+CanNotCollide=StringToken
+StayOnTile=StringToken,IntegerToken
+RegularMove=StringToken,DoubleToken,DoubleToken
+Immobile=StringToken
+SlowShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken
+RegularRemove=StringToken
+ShowCorpse=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken
+Immortal=StringToken
