--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -7,6 +7,7 @@ RegularDie=behaviors.Remove
 #
 CanNotMove=behaviors.Immobile
 RegularMove=behaviors.Move
+BackForthMove=behaviors.BackForthMove
 #
 # Ways of Collision
 #
