--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -50,7 +50,7 @@ DeleteLevel=NullToken
 ResetLevelID=IntegerToken
 DeleteScene=NullToken
 #
-#
+#Specific 
 #
 Explode=StringToken,IntegerToken,StringToken,IntegerToken,IntegerToken
 HitterEliminateVictim=StringToken,IntegerToken
