--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -12,11 +12,15 @@ ModifyActorImage=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToke
 DeleteActor=TypeToken,ParameterToken
 # Here change actor's image (need to go through Engine)
 # ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken
+ResetLevelID=TypeToken,ParameterToken,TypeToken,ParameterToken
+Deletelevel=TypeToken,ParameterToken
 CreateLevel=TypeToken,ParameterToken
-ModifyLevel=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
+DeleteScene=TypeToken,ParameterToken
 CreateScene=TypeToken,ParameterToken,TypeToken,ParameterToken
-SwitchScene=TypeToken,ParameterToken,TypeToken,ParameterToken
 ModifyScene=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
+ModifyLevel=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
+# Done through Engine
+SwitchScene=TypeToken,ParameterToken,TypeToken,ParameterToken
 # 
 # Detailed Data Format
 # 
