--- a/src/engineResources/TypeMethodMatcher.properties
+++ b/src/engineResources/TypeMethodMatcher.properties
@@ -1,4 +1,8 @@
 #  Matches Token with respective methods (Data Driven Design)
+CreatePlayer=createPlayer
+CreateActor=createActor
+CreateLevel=addLevel
+CreateScene=addScene
 PlayerImage=createPlayer
 ActorImage=createActor
 Speed=setSpeed
