Flexible factory level clear

--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -10,7 +10,7 @@ ModifyGoalManager=modifyGoalManager
 ModifyScoreManager=oneStep
 ModifyTimerManager=oneStep
 ModifyInputManager=oneStep
-SwitchScene=oneStep,Engine
+SwitchScene=oneStep,Engine,"",0
 # Here Engine Function Not implemented Yet
 ModifyActorImage=oneStep 
 # Reflection thru GameReflect
@@ -18,6 +18,9 @@ ModifyActorImage=oneStep
 #
 CreateLevel=oneStep,Game,"",0
 CreateScene=oneStep,Game,"",1
+ResetLevelID=oneStep,Game,"",0
+DeleteLevel=oneStep,Game,"",0
+DeleteScene=oneStep,Game,"",0
 #
 ModifyScene=twoStep,Game,getScene,1
 ModifyPlayer=twoStep,Game,getPlayer,2
