--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -13,7 +13,7 @@ DeleteActor=TypeToken,ParameterToken
 # Here change actor's image (need to go through Engine)
 # ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken
 ResetLevelID=TypeToken,ParameterToken,TypeToken,ParameterToken
-Deletelevel=TypeToken,ParameterToken
+DeleteLevel=TypeToken,ParameterToken
 CreateLevel=TypeToken,ParameterToken
 DeleteScene=TypeToken,ParameterToken
 CreateScene=TypeToken,ParameterToken,TypeToken,ParameterToken
@@ -21,49 +21,3 @@ ModifyScene=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
 ModifyLevel=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
 # Done through Engine
 SwitchScene=TypeToken,ParameterToken,TypeToken,ParameterToken
-# 
-# Detailed Data Format
-# 
-Image=StringToken,IntegerToken,IntegerToken
-PlayerImage=StringToken,IntegerToken,IntegerToken
-ActorImage=StringToken,IntegerToken,IntegerToken
-TileCollision=StringToken,IntegerToken
-Lives=IntegerToken
-Speed=DoubleToken,DoubleToken
-ChangeToID=IntegerToken
-ChangeCollisionID=IntegerToken
-Position=DoubleToken,DoubleToken
-Name=StringToken
-CollisionID=IntegerToken
-ID=IntegerToken
-Colid=IntegerToken
-Move=StringToken
-Shoot=StringToken
-Die=StringToken
-Background=StringToken
-PlayerInitialPosition=DoubleToken,DoubleToken
-GoalCollision=IntegerToken,IntegerToken
-GoalCollisionTile=IntegerToken,IntegerToken
-Pause=InterToken
-CheatWin=InterToken
-SetKey=IntegerToken,StringToken
-InitialScore=IntegerToken
-SetTimeToState=StringToken,IntegerToken
-SceneID=InterToken
-DeleteLevel=NullToken
-ResetLevelID=IntegerToken
-DeleteScene=NullToken
-#
-#Specific 
-#
-Explode=StringToken,IntegerToken,StringToken,IntegerToken,IntegerToken
-HitterEliminateVictim=StringToken,IntegerToken
-PerishTogether=StringToken,IntegerToken
-CanNotCollide=StringToken
-StayOnTile=StringToken,IntegerToken
-RegularMove=StringToken,DoubleToken,DoubleToken
-Immobile=StringToken
-SlowShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken
-RegularRemove=StringToken
-ShowCorpse=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken
-Immortal=StringToken
