--- a/src/engineResources/TypeMethodMatcher.properties
+++ b/src/engineResources/TypeMethodMatcher.properties
@@ -3,6 +3,9 @@ CreatePlayer=createPlayer
 CreateActor=createActor
 CreateLevel=addLevel
 CreateScene=addScene
+ResetLevelID=resetLevelID
+DeleteLevel=removeLevel
+DeleteScene=removeScene
 PlayerImage=createPlayer
 ActorImage=createActor
 Speed=setSpeed
@@ -13,13 +16,9 @@ Collision=setCollisionBehavior
 Move=setMoveBehavior
 Shoot=setShootBehavior
 Die=setDieBehavior
-# DeleteLevel calls removeLevel from Game
-DeleteLevel=removeLevel
-ResetLevelID=resetID
 # here is createScene, and from Game
 LevelID=addLevel
 SceneID=addScene
-DeleteScene=removeScene
 Background=createBackground
 # setPlayerInitPosition is a method in the scene
 PlayerInitialPosition=setPlayerInitPosition
