--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -15,7 +15,7 @@ DeleteActor=TypeToken,ParameterToken
 ResetLevelID=TypeToken,ParameterToken,TypeToken,ParameterToken
 DeleteLevel=TypeToken,ParameterToken
 CreateLevel=TypeToken,ParameterToken
-DeleteScene=TypeToken,ParameterToken
+DeleteScene=TypeToken,ParameterToken,TypeToken,ParameterToken
 CreateScene=TypeToken,ParameterToken,TypeToken,ParameterToken
 ModifyScene=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
 ModifyLevel=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
