--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -5,6 +5,8 @@ CreatePlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,Pa
 CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
 ModifyPlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
 ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
+CreateTile=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken,ParameterToken,ParameterToken
+SetDragTile=TypeToken,ParameterToken,TypeToken,ParameterToken
 #NOTE: will implement below when Game/Engine is ready
 DeleteActor=TypeToken,ParameterToken
 Background=TypeToken,ParameterToken,TypeToken,ParameterToken
