--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -11,6 +11,8 @@ ModifyScoreManager=oneStep
 ModifyTimerManager=oneStep
 ModifyInputManager=oneStep
 SwitchScene=oneStep,Engine,"",0
+CreateTile=oneStep,Engine,"",0
+SetDragTile=oneStep,Engine,"",0
 # Here Engine Function Not implemented Yet
 ModifyActorImage=oneStep
 # Reflection thru GameReflect
