--- a/src/engineResources/TypeMethodMatcher.properties
+++ b/src/engineResources/TypeMethodMatcher.properties
@@ -1,4 +1,6 @@
 #  Matches Token with respective methods (Data Driven Design)
+CreateTile=createTiles
+SetDragTile=setDefaultTiles
 CreatePlayer=createPlayer
 CreateActor=createActor
 CreateLevel=addLevel
