--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -44,3 +44,7 @@ SlowShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleT
 RegularRemove=StringToken
 ShowCorpse=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken
 Immortal=StringToken
+TileImage=StringToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken
+DragImage=StringToken
+WinByTime=StringToken,IntegerToken
+Magnitude=DoubleToken
