--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -2,8 +2,8 @@
 # Detailed Data Format
 # 
 Image=StringToken,IntegerToken,IntegerToken
-PlayerImage=StringToken,IntegerToken,IntegerToken
-ActorImage=StringToken,IntegerToken,IntegerToken
+#PlayerImage=StringToken,IntegerToken,IntegerToken
+#ActorImage=StringToken,IntegerToken,IntegerToken
 TileCollision=StringToken,IntegerToken
 Lives=IntegerToken
 Speed=DoubleToken,DoubleToken
@@ -48,3 +48,4 @@ TileImage=StringToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken
 DragImage=StringToken
 WinByTime=StringToken,IntegerToken
 Magnitude=DoubleToken
+BackForthMove=StringToken,DoubleToken,IntegerToken
