--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -31,4 +31,4 @@ QuickShoot=behaviors.QuickShoot
 # Ways of win
 #
 WinByTime=behaviors.WinByTime
-WinByRemove=behaviors.WinByRemove
+WinByCollision=behaviors.WinByCollision
