--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -2,8 +2,6 @@
 # Detailed Data Format
 # 
 Image=StringToken,IntegerToken,IntegerToken
-#PlayerImage=StringToken,IntegerToken,IntegerToken
-#ActorImage=StringToken,IntegerToken,IntegerToken
 TileCollision=StringToken,IntegerToken
 Lives=IntegerToken
 Speed=DoubleToken,DoubleToken
@@ -46,6 +44,10 @@ ShowCorpse=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken
 Immortal=StringToken
 TileImage=StringToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken
 DragImage=StringToken
-WinByTime=StringToken,IntegerToken
 Magnitude=DoubleToken
 BackForthMove=StringToken,DoubleToken,IntegerToken
+#
+# Ways of Win
+#
+WinByCollision=StringToken,IntegerToken
+WinByTime=StringToken,IntegerToken
