factory compatiability update

--- a/src/engineResources/FactoryOrderPath.properties
+++ b/src/engineResources/FactoryOrderPath.properties
@@ -2,30 +2,34 @@
 #
 # Reflection thru EngineReflect
 # order path through Engine 
-CreatePlayer=oneStep,Engine,"",0
-CreateActor=oneStep,Engine,"",0
-Background=oneStep,Engine,"",0 
+CreatePlayer=oneStep,Engine,"",""
+CreateActor=oneStep,Engine,"",""
+Background=oneStep,Engine,"","" 
 ModifyBackground=oneStep
 ModifyGoalManager=modifyGoalManager
 ModifyScoreManager=oneStep
 ModifyTimerManager=oneStep
 ModifyInputManager=oneStep
-SwitchScene=oneStep,Engine,"",0
-CreateTile=oneStep,Engine,"",0
-SetDragTile=oneStep,Engine,"",0
+SwitchScene=oneStep,Engine,"",""
+CreateTile=oneStep,Engine,"",""
+SetDragTile=oneStep,Engine,"",""
 # Here Engine Function Not implemented Yet
+ModifyPlayerImage=
 ModifyActorImage=oneStep
 # Reflection thru GameReflect
 # order path through specific class (after you have retrieved the instance of object using (using reflection, too)) 
 #
-CreateLevel=oneStep,Game,"",0
+CreateLevel=oneStep,Game,"",""
 CreateScene=oneStep,Game,"",1
-ResetLevelID=oneStep,Game,"",0
-DeleteLevel=oneStep,Game,"",0
-DeleteScene=oneStep,Game,"",0
+ResetLevelID=oneStep,Game,"",""
+DeleteLevel=oneStep,Game,"",""
+DeleteScene=oneStep,Game,"",
 #
 ModifyScene=twoStep,Game,getScene,1
-ModifyPlayer=twoStep,Game,getPlayer,2
+ModifyPlayer=twoStep,Game,getPlayer,""
 ModifyActor=twoStep,Game,getNonPlayer,2
+ModifyGravity=twoStep,Game,getGravity,""
+CreateGoal=twoStep,Game,getScene,1
+
 #note: discuss tmr 
 #	CreateLevel=Engine
