--- a/src/engineResources/TypeMethodMatcher.properties
+++ b/src/engineResources/TypeMethodMatcher.properties
@@ -1,4 +1,7 @@
 #  Matches Token with respective methods (Data Driven Design)
+SetKey=setKey
+Magnitude=setMagnitude
+CreateGoal=setWinBehavior
 CreateTile=createTiles
 SetDragTile=setDefaultTiles
 CreatePlayer=createPlayer
@@ -16,10 +19,27 @@ Speed=setSpeed
 ChangeToID=resetID
 ChangeCollisionID=resetCollisionID
 Position=setPos
+Explode=setDieBehavior
+HitterEliminateVictim=setCollisionBehavior
+ParishTogether=setCollisionBehavior
+RegularMove=setMoveBehavior
+StayOnTile=setTileCollisionBehavior
+Immobile=setMoveBehavior
+SlowShoot=setShootBehavior
+QuickShoot=setShootBehavior
+RegularRemove=setDieBehavior
+Immortal=setDieBehavior
+BackForthMove=setMoveBehavior
 Collision=setCollisionBehavior
-Move=setMoveBehavior
-Shoot=setShootBehavior
-Die=setDieBehavior
+WinByCollision=setWinBehavior
+WinByTime=setWinBehavior
+GoalCollisionTile=SetWinBehavior
+# Here is player specific settings
+CanNotCollide=setCollisionBehavior
+
+
+
+
 # here is createScene, and from Game
 LevelID=addLevel
 SceneID=addScene
