--- a/src/engineResources/DataFormat.properties
+++ b/src/engineResources/DataFormat.properties
@@ -4,9 +4,11 @@
 CreatePlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
 CreateActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken,TypeToken,ParameterToken
 ModifyPlayer=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
-ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken
+ModifyActor=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken,ParameterToken,ParameterToken,ParameterToken,ParameterToken
 CreateTile=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken,ParameterToken,ParameterToken,ParameterToken
 SetDragTile=TypeToken,ParameterToken,TypeToken,ParameterToken
+CreateGoal=TypeToken,ParameterToken,ParameterToken
+ModifyGravity=TypeToken,ParameterToken
 #NOTE: will implement below when Game/Engine is ready
 DeleteActor=TypeToken,ParameterToken
 Background=TypeToken,ParameterToken,TypeToken,ParameterToken
@@ -19,7 +21,7 @@ DeleteLevel=TypeToken,ParameterToken
 CreateLevel=TypeToken,ParameterToken
 DeleteScene=TypeToken,ParameterToken,TypeToken,ParameterToken
 CreateScene=TypeToken,ParameterToken,TypeToken,ParameterToken
-ModifyScene=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
-ModifyLevel=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
+ModifyScene=TypeToken,ParameterToken,ParameterToken
+# ModifyLevel=TypeToken,ParameterToken,TypeToken,ParameterToken,ParameterToken
 # Done through Engine
 SwitchScene=TypeToken,ParameterToken,TypeToken,ParameterToken
