--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -32,3 +32,4 @@ QuickShoot=behaviors.QuickShoot
 #
 WinByTime=behaviors.WinByTime
 WinByCollision=behaviors.WinByCollision
+WinByTileCollision=behaviors.WinByTileCollision
