--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -46,6 +46,7 @@ TileImage=StringToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken
 DragImage=StringToken
 Magnitude=DoubleToken
 BackForthMove=StringToken,DoubleToken,IntegerToken
+Jump=StringToken,DoubleToken,IntegerToken
 #
 # Ways of Win
 #
