--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -1,5 +1,5 @@
 # 
-# Detailed Data Format
+# Ignore below; may not needed
 # 
 Image=StringToken,IntegerToken,IntegerToken
 TileCollision=StringToken,IntegerToken
@@ -29,7 +29,7 @@ DeleteLevel=NullToken
 ResetLevelID=IntegerToken
 DeleteScene=NullToken
 #
-# Specific 
+# Detailed Data Format
 #
 Explode=StringToken,IntegerToken,StringToken,IntegerToken,IntegerToken
 HitterEliminateVictim=StringToken,IntegerToken
