--- a/src/engineResources/OrderPath.properties
+++ b/src/engineResources/OrderPath.properties
@@ -35,4 +35,5 @@ ModifyActor=twoStep,Game,getNonPlayer,2
 ModifyGravity=twoStep,Game,getGravity,""
 CreateGoal=twoStep,Game,getScene,1
 ModifyCollisionBehavior=twoStep,Game,getCollisionManager,""
+ModifyTileCollisionBehavior=twoStep,Game,getCollisionManager,""
 
