--- a/src/engineResources/OrderPath.properties
+++ b/src/engineResources/OrderPath.properties
@@ -20,7 +20,7 @@ ModifyActorImage=oneStep
 # order path through specific class (after you have retrieved the instance of object using (using reflection, too)) 
 #
 CreateLevel=oneStep,Game,"",""
-CreateScene=oneStep,Game,"",LevelScene
+CreateScene=oneStep,Game,"",""
 ResetLevelID=oneStep,Game,"",""
 DeleteLevel=oneStep,Game,"",""
 DeleteScene=oneStep,Game,"",""
