--- a/src/engineResources/OrderPath.properties
+++ b/src/engineResources/OrderPath.properties
@@ -14,8 +14,8 @@ SwitchScene=oneStep,Engine,"",""
 CreateTile=oneStep,Engine,"",""
 SetDragTile=oneStep,Engine,"",""
 # Here Engine Function Not implemented Yet
-ModifyPlayerImage=
-ModifyActorImage=oneStep
+ModifyPlayerImage=oneStep,Engine,"",""
+ModifyActorImage=oneStep,Engine,"",""
 # Reflection thru GameReflect
 # order path through specific class (after you have retrieved the instance of object using (using reflection, too)) 
 #
