--- a/src/engineResources/OrderPath.properties
+++ b/src/engineResources/OrderPath.properties
@@ -4,8 +4,7 @@
 # order path through Engine 
 CreatePlayer=oneStep,Engine,"",""
 CreateActor=oneStep,Engine,"",""
-Background=oneStep,Engine,"","" 
-ModifyBackground=oneStep
+ModifyBackground=oneStep,Engine,"",""
 ModifyGoalManager=modifyGoalManager
 ModifyScoreManager=oneStep
 ModifyTimerManager=oneStep
