--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -39,3 +39,8 @@ WinByTileCollision=behaviors.WinByTileCollision
 TriggerByTime=behavior.TriggerByTime
 TriggerByCollision=behavior.TriggerByCollision
 TriggerByTileCollision=behavior.TriggerByTileCollision
+#
+# Different events
+# 
+EventShowerEnemy=behavior.EventShowerEnemy
+EventLevelDone=behavior.EventLevelDone
