--- a/src/engineResources/MethodMatcher.properties
+++ b/src/engineResources/MethodMatcher.properties
@@ -39,6 +39,7 @@ BackForthMove=setMoveBehavior
 Collision=setCollisionBehavior
 WinByCollision=setWinBehavior
 WinByTime=setWinBehavior
+WinByRemove=setWinBehavior
 GoalCollisionTile=SetWinBehavior
 # Here is player specific settings
 CanNotCollide=setCollisionBehavior
