--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -36,9 +36,10 @@ WinByTileCollision=behaviors.WinByTileCollision
 # 
 # Ways to trigger events
 #
-TriggerByTime=behavior.TriggerByTime
-TriggerByCollision=behavior.TriggerByCollision
-TriggerByTileCollision=behavior.TriggerByTileCollision
+TriggerByTime=behaviors.TriggerByTime
+TriggerByCollision=behaviors.TriggerByCollision
+TriggerByEnterTile=behaviors.TriggerByEnterTile
+TriggerByRemove=behaviors.TriggerByRemove
 #
 # Different events
 # 
