--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -27,6 +27,8 @@ StayOnTile=behaviors.StayOnTile
 #
 SlowShoot=behaviors.SlowShoot
 QuickShoot=behaviors.QuickShoot
+SpreadShoot=behaviors.SpreadShoot
+SlowShootByTime=behaviors.SlowShootByTime
 # 
 # Ways to trigger events
 #
