--- a/src/engineResources/DataFormatReflection.properties
+++ b/src/engineResources/DataFormatReflection.properties
@@ -1,3 +1,8 @@
+#
+# author Justin (Zihao) Zhang
+#
 IntegerToken=convertStringToInteger
 StringToken=convertStringToString
 DoubleToken=convertStringToDouble
+CharToken=convertStringToChar
+BooleanToken=convertStringToBoolean
