--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -48,14 +48,11 @@ Magnitude=DoubleToken
 BackForthMove=StringToken,DoubleToken,IntegerToken
 Jump=StringToken,DoubleToken,IntegerToken
 #
-# Ways of Win
-#
-WinByCollision=StringToken,IntegerToken
-WinByTime=StringToken,IntegerToken
 # Ways of Trigger
+#
 SetTriggerByTime=StringToken,IntegerToken
 SetTriggerByRemove=StringToken,IntegerToken
 SetTriggerByCollision=StringToken,IntegerToken,IntegerToken,IntegerToken
-SetTriggerByTileCollision=StringToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken
+SetTriggerByTileCollision=StringToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken
 SetEventLevelDone=StringToken
 SetEventEnemyShower=StringToken,IntegerToken,IntegerToken,IntegerToken
