added yellow format in GDoc to factory

--- a/src/engineResources/MethodMatcher.properties
+++ b/src/engineResources/MethodMatcher.properties
@@ -1,14 +1,26 @@
 #  Matches Token with respective methods (Data Driven Design)
-# Managers
-setTriggerByTime=setEventOrTriggerBehavior
-setTriggerByRemove=setEventOrTriggerBehavior
-setTriggerByCollision=setEventOrTriggerBehavior
-setTriggerByTileCollision=setEventOrTriggerBehavior
-setEventLevelDone=setEventOrTriggerBehavior
-setEventEnemyShower=setEventOrTriggerBehavior
-ModifyBackground=setBackground
-# ModifyActorImage=modifyActorImage
-# ModifyPlayerImage=modifyPlayerImage
+# Cases which go through twoStep, Game, but no the first typeToken is an indicator
+#Transition State
+TSBackground=setBackground
+Frame=setFrame
+DisplayMessage=addInstruction
+DisplayImage=addImage
+#
+SetInitialScene=setInitialScene
+SetInitLives=setInitLives
+RestoreLifeByLevel=setRestore
+Name=resetName
+Jump=setJumpBehavior
+CanNotJump=setJumpBehavior
+# Tiles
+CreateTile=createTilesFromString
+SetDragTile=loadTileImage
+Background=setSceneView
+#ModifyBackground=setBackground
+# ModifyActorImage
+ModifyActorImage=modifyActorImage
+ModifyPlayerImage=modifyPlayerImage
+#
 DeleteActor=deleteNonPlayer
 DeletePlayer=deletePlayer
 SetKey=setKey
@@ -31,7 +43,7 @@ ChangeCollisionID=resetCollisionID
 Position=setPos
 Explode=setDieBehavior
 HitterEliminateVictim=addCollisionPair
-ParishTogether=addCollisionPair
+PerishTogether=addCollisionPair
 StayOnTile=addTileCollisionPair
 RegularMove=setMoveBehavior
 Immobile=setMoveBehavior
@@ -48,4 +60,22 @@ LevelID=addLevel
 SceneID=addScene
 # setPlayerInitPosition is a method in the scene
 PlayerInitialPosition=setPlayerInitPosition
-# Below Not implemented Yet
+# Manager related
+InitialScore=setInitValue
+SetCollisionScore=setValue
+SetScoreCondition=setValue
+SetTransitionScore=setValue
+SetTimeScore=setValue
+Magnitude=
+SetCollisionBlood=setValue
+SetTileCollisionBlood=setValue
+SetKey=setKey
+SetCollisionLive=setValue
+SetTileCollisionLive=setValue
+# Trigger Manager
+setTriggerByTime=setEventOrTriggerBehavior
+setTriggerByRemove=setEventOrTriggerBehavior
+setTriggerByCollision=setEventOrTriggerBehavior
+setTriggerByTileCollision=setEventOrTriggerBehavior
+setEventLevelDone=setEventOrTriggerBehavior
+setEventEnemyShower=setEventOrTriggerBehavior
