--- a/src/engineResources/OrderPath.properties
+++ b/src/engineResources/OrderPath.properties
@@ -1,7 +1,9 @@
 # Data Driven Design to indicate the class path on which it reflect on
 #
 # Reflection thru EngineReflect
-# order path through Engine 
+# order path through Engine
+SetDragTile=oneStep,Engine,"",""
+CreateTile=oneStep,Engine,"",""
 CreatePlayer=oneStep,Engine,"",""
 CreateActor=oneStep,Engine,"",""
 ModifyBackground=oneStep,Engine,"",""
@@ -10,7 +12,8 @@ SwitchScene=oneStep,Engine,"",""
 CreateTile=oneStep,Engine,"",""
 SetDragTile=oneStep,Engine,"",""
 ModifyActorImage=oneStep,Engine,"",""
-ModifyPlayerImage=oneStep,Engine,"",""
+ModifySceneView=oneStep,Engine,"",""
+# ModifyPlayerImage=oneStep,Engine,"",""
 # Reflection thru GameReflect
 # order path through specific class (after you have retrieved the instance of object using (using reflection, too)) 
 #
@@ -19,18 +22,23 @@ CreateScene=oneStep,Game,"",""
 ResetLevelID=oneStep,Game,"",""
 DeleteLevel=oneStep,Game,"",""
 DeleteScene=oneStep,Game,"",""
+
 #deleteNonPlayer
 DeletePlayer=oneStep,Game,"",LevelSceneObject
 #deletePlayer
 DeleteActor=oneStep,Game,"",LevelSceneObject
 #
+ModifyTransitionState=twoStep,Game,getTransitionState,GameState
 CreateGoal=twoStep,Game,getScene,LevelScene
+ModifyInitScene=oneStep,Game,getLevel,level
 ModifyScene=twoStep,Game,getScene,LevelScene
 ModifyPlayer=twoStep,Game,getPlayer,objectID
 ModifyActor=twoStep,Game,getNonPlayer,LevelSceneObject
 ModifyGravity=twoStep,Game,getGravity,""
 ModifyCollisionBehavior=twoStep,Game,getCollisionManager,""
+ModifyLiveManager=twoStep,Game,getLiveManager,""
 ModifyTileCollisionBehavior=twoStep,Game,getCollisionManager,""
 ModifyTriggerEventManager=twoStep,Game,getTEM,""
-ModifyScoreManager=oneStep
-ModifyInputManager=oneStep
+ModifyScoreManager=twoStep,Game,getScoreManager,""
+ModifyBloodManager=twoStep,Game,getBloodManager,""
+ModifyInputManager=twoStep,Game,getInputManager,""
