--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -2,7 +2,6 @@
 # Do not modify below. Tell me (Steve) to do so
 # 
 DragImage=StringToken
-TileColid=CharToken
 TileMap=StringToken
 Image=StringToken,IntegerToken,IntegerToken
 # Currently un-decided
@@ -43,6 +42,7 @@ SetInitialScene=IntegerToken
 #
 # Detailed Data Format
 #
+TileID=CharToken
 SetInitLives=IntegerToken,IntegerToken
 RestoreLifeByLevel=BooleanToken
 Explode=StringToken,IntegerToken,StringToken,IntegerToken,IntegerToken
