--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -1,3 +1,4 @@
+# author Justin (Zihao) Zhang
 #
 # Ways of Die
 #
@@ -8,11 +9,13 @@ RegularRemove=behaviors.Remove
 CanNotMove=behaviors.Immobile
 RegularMove=behaviors.Move
 BackForthMove=behaviors.BackForthMove
+BackForthMoveWithVerticalSpeed=behaviors.BackForthMoveWithVerticalSpeed
 #
 # Ways of Collision
 #
 HitterEliminateVictim=behaviors.Eliminate
 PerishTogether=behaviors.PerishTogether
+StayOnObject=behaviors.StayOnObject
 #
 # Ways of Jump
 #
