--- a/src/engineResources/MethodMatcher.properties
+++ b/src/engineResources/MethodMatcher.properties
@@ -15,9 +15,10 @@ CanNotJump=setJumpBehavior
 # Tiles
 CreateTile=createTilesFromString
 SetDragTile=loadTileImage
-Background=setSceneView
+#Background=setSceneView
 #ModifyBackground=setBackground
 # ModifyActorImage
+ModifySceneView=setSceneView
 ModifyActorImage=modifyActorImage
 ModifyPlayerImage=modifyPlayerImage
 #
