--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -16,6 +16,7 @@ BackForthMoveWithVerticalSpeed=behaviors.BackForthMoveWithVerticalSpeed
 HitterEliminateVictim=behaviors.Eliminate
 PerishTogether=behaviors.PerishTogether
 StayOnObject=behaviors.StayOnObject
+Rebounce=behaviors.Rebounce
 #
 # Ways of Jump
 #
@@ -25,6 +26,7 @@ CanNotJump=behaviors.NonJumpable
 # Ways of Tile Collision
 #
 StayOnTile=behaviors.StayOnTile
+KilledByTile=behaviors.KilledByTile
 #
 # Ways of Shoot
 #
