--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -21,7 +21,7 @@ Rebounce=behaviors.Rebounce
 # Ways of Jump
 #
 Jump=behaviors.Jump
-CanNotJump=behaviors.NonJumpable
+CanNotJump=behaviors.CanNotJump
 #
 # Ways of Tile Collision
 #
