--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -34,6 +34,7 @@ SlowShoot=behaviors.SlowShoot
 QuickShoot=behaviors.QuickShoot
 SpreadShoot=behaviors.SpreadShoot
 SlowShootByTime=behaviors.SlowShootByTime
+SpreadShootByTime=behaviors.SpreadShootByTime
 # 
 # Ways to trigger events
 #
