--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -22,6 +22,7 @@ Rebounce=behaviors.Rebounce
 #
 Jump=behaviors.Jump
 CanNotJump=behaviors.CanNotJump
+JumpByTime=behaviors.JumpByTime
 #
 # Ways of Tile Collision
 #
