--- a/src/engineResources/OrderPath.properties
+++ b/src/engineResources/OrderPath.properties
@@ -11,12 +11,15 @@ ModifyGoalManager=modifyGoalManager
 SwitchScene=oneStep,Engine,"",""
 CreateTile=oneStep,Engine,"",""
 SetDragTile=oneStep,Engine,"",""
-ModifyActorImage=oneStep,Engine,"",""
+ModifyActorAnimation=oneStep,Engine,"",""
+ModifyPlayerAnimation=oneStep,Engine,"",""
 ModifySceneView=oneStep,Engine,"",""
 # ModifyPlayerImage=oneStep,Engine,"",""
 # Reflection thru GameReflect
 # order path through specific class (after you have retrieved the instance of object using (using reflection, too)) 
 #
+ModifyGame=oneStep,Game,"",""
+#need testing above
 CreateLevel=oneStep,Game,"",""
 CreateScene=oneStep,Game,"",""
 ResetLevelID=oneStep,Game,"",""
