--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -13,6 +13,15 @@ Frame=IntegerToken
 DisplayMessage=StringToken,IntegerToken,IntegerToken
 DisplayImage=StringToken,IntegerToken,IntegerToken
 #
+setName=StringToken
+#Actors and Players
+BackForthMoveWithVerticalSpeed=StringToken,DoubleToken,IntegerToken,DoubleToken
+Jump=StringToken,StringToken,IntegerToken,IntegerToken
+FDMove=StringToken,StringToken,IntegerToken,IntegerToken
+BKMove=StringToken,StringToken,IntegerToken,IntegerToken
+SlowShootByTime=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken
+SpreadShootByTime=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken
+JumpByTime=StringToken,DoubleToken,IntegerToken,IntegerToken
 TileCollision=StringToken,IntegerToken
 Lives=IntegerToken
 Speed=DoubleToken,DoubleToken
@@ -53,6 +62,7 @@ StayOnTile=StringToken,CharToken,StringToken
 RegularMove=StringToken,DoubleToken,DoubleToken
 Immobile=StringToken
 SlowShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken
+SpreadShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleTokenSet
 RegularRemove=StringToken
 ShowCorpse=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken
 Immortal=StringToken
@@ -76,8 +86,10 @@ EventEnemyShower=StringToken,IntegerToken,IntegerToken,IntegerToken
 #
 InitialScore=IntegerToken
 SetCollisionScore=IntegerToken,StringToken,IntegerToken,IntegerToken
+SetTileCollisionScore=IntegerToken,StringToken,IntegerToken,CharToken
 SetScoreCondition=IntegerToken,StringToken
-SetTransitionScore=IntegerToken,StringToken,StringToken,StringToken
+SetTransitionScore=IntegerToken,StringToken,IntegerToken
+SetTransitionBlood=IntegerToken,StringToken,IntegerToken
 SetTimeScore=IntegerToken
 SetCollisionBlood=IntegerToken,StringToken,IntegerToken,IntegerToken
 SetTileCollisionBlood=IntegerToken,StringToken,IntegerToken,IntegerToken
