Very Final Update

--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -17,6 +17,7 @@ HitterEliminateVictim=behaviors.Eliminate
 PerishTogether=behaviors.PerishTogether
 StayOnObject=behaviors.StayOnObject
 Rebounce=behaviors.Rebounce
+ShootHitObject=behaviors.ShootHitObject
 #
 # Ways of Jump
 #
