--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -58,7 +58,6 @@ Explode=StringToken,IntegerToken,StringToken,IntegerToken,IntegerToken
 HitterEliminateVictim=StringToken,IntegerToken,StringToken
 PerishTogether=StringToken,IntegerToken,StringToken
 CanNotCollide=StringToken
-StayOnTile=StringToken,CharToken,StringToken
 RegularMove=StringToken,DoubleToken,DoubleToken
 Immobile=StringToken
 SlowShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken
@@ -94,3 +93,9 @@ SetTimeScore=IntegerToken
 SetCollisionBlood=IntegerToken,StringToken,IntegerToken,IntegerToken
 SetTileCollisionBlood=IntegerToken,StringToken,IntegerToken,IntegerToken
 SetKey=IntegerToken,StringToken
+#collision behaviors
+StayOnObject=StringToken,IntegerToken,StringToken
+Rebounce=StringToken,IntegerToken,StringToken
+ShootHitObject=StringToken,IntegerToken,StringToken
+StayOnTile=StringToken,CharToken,StringToken
+KilledByTile=StringToken,CharToken,StringToken
