--- a/src/engineResources/MethodMatcher.properties
+++ b/src/engineResources/MethodMatcher.properties
@@ -10,8 +10,8 @@ SetInitialScene=setInitialScene
 SetInitLives=setInitLives
 RestoreLifeByLevel=setRestore
 Name=resetName
-Jump=setJumpBehavior
-CanNotJump=setJumpBehavior
+Jump=setBehavior
+CanNotJump=setBehavior
 # Tiles
 CreateTile=createTilesFromString
 SetDragTile=loadTileImage
@@ -23,15 +23,14 @@ ModifySceneView=setSceneView
 ModifyActorAnimation=setObjectImage
 ModifyPlayerAnimation=setObjectImage
 #Actor Fundamentals
-BackForthMoveWithVerticalSpeed=setMoveBehavior
-SlowShootByTime=setShootBehavior
-SpreadShootByTime=setShootBehavior
-JumpByTime=setJumpBehavior
+BackForthMoveWithVerticalSpeed=setBehavior
+SlowShootByTime=setBehavior
+SpreadShootByTime=setBehavior
+JumpByTime=setBehavior
 DeleteActor=deleteNonPlayer
 DeletePlayer=deletePlayer
 SetKey=setKey
 Magnitude=setMagnitude
-CreateGoal=setWinBehavior
 CreateTile=createTiles
 CreatePlayer=createPlayer
 CreateActor=createActor
@@ -46,7 +45,7 @@ Speed=setInitSpeed
 ChangeToID=resetID
 ChangeCollisionID=resetCollisionID
 Position=setPos
-Explode=setDieBehavior
+Explode=setBehavior
 HitterEliminateVictim=setDirectionalCollisionBehavior
 PerishTogether=setDirectionalCollisionBehavior
 StayOnObject=setDirectionalCollisionBehavior
@@ -55,14 +54,14 @@ ShootHitObject=setDirectionalCollisionBehavior
 StayOnTile=setDirectionalTileColllisionBehavior
 KilledByTile=setDirectionalTileColllisionBehavior
 StayOnTile=addTileCollisionPair
-RegularMove=setMoveBehavior
-Immobile=setMoveBehavior
-SlowShoot=setShootBehavior
-QuickShoot=setShootBehavior
-SpreadShoot=setShootBehavior
-RegularRemove=setDieBehavior
-Immortal=setDieBehavior
-BackForthMove=setMoveBehavior
+RegularMove=setBehavior
+Immobile=setBehavior
+SlowShoot=setBehavior
+QuickShoot=setBehavior
+SpreadShoot=setBehavior
+RegularRemove=setBehavior
+Immortal=setBehavior
+BackForthMove=setBehavior
 Collision=setCollisionBehavior
 # Here is player specific settings
 CanNotCollide=setCollisionBehavior
