--- a/src/engineResources/OrderPath.properties
+++ b/src/engineResources/OrderPath.properties
@@ -30,6 +30,7 @@ DeletePlayer=oneStep,Game,"",LevelSceneObject
 #deletePlayer
 DeleteActor=oneStep,Game,"",LevelSceneObject
 #
+ModifyLevel=twoStep,Game,setInitialScene,LevelScene
 ModifyTransitionState=twoStep,Game,getTransitionState,GameState
 CreateGoal=twoStep,Game,getScene,LevelScene
 ModifyInitScene=oneStep,Game,getLevel,level
