--- a/src/engineResources/MethodMatcher.properties
+++ b/src/engineResources/MethodMatcher.properties
@@ -55,9 +55,9 @@ KilledByTile=setDirectionalTileColllisionBehavior
 StayOnTile=setDirectionalTileColllisionBehavior
 RegularMove=setBehavior
 Immobile=setBehavior
-SlowShoot=setShootBehavior
-QuickShoot=setShootBehavior
-SpreadShoot=setShootBehavior
+SlowShoot=setBehavior
+QuickShoot=setBehavior
+SpreadShoot=setBehavior
 RegularRemove=setBehavior
 Immortal=setBehavior
 BackForthMove=setBehavior
