--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -20,9 +20,9 @@ BackForthMoveWithVerticalSpeed=StringToken,DoubleToken,IntegerToken,DoubleToken
 Jump=StringToken,StringToken,IntegerToken,IntegerToken
 FDMove=StringToken,StringToken,IntegerToken,IntegerToken
 BKMove=StringToken,StringToken,IntegerToken,IntegerToken
-SlowShootByTime=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken
+SlowShootByTime=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken,IntegerToken
 SpreadShootByTime=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken,IntegerToken
-QuickShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken,IntegerToken
+QuickShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken
 JumpByTime=StringToken,DoubleToken,IntegerToken,IntegerToken
 TileCollision=StringToken,IntegerToken
 Lives=IntegerToken
@@ -63,7 +63,7 @@ CanNotCollide=StringToken
 RegularMove=StringToken,DoubleToken,DoubleToken
 Immobile=StringToken
 SlowShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken
-SpreadShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleTokenSet,IntegerToken,IntegerToken
+SpreadShoot=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken,DoubleToken,IntegerToken,IntegerToken
 RegularRemove=StringToken
 ShowCorpse=StringToken,StringToken,IntegerToken,IntegerToken,IntegerToken
 Immortal=StringToken
