--- a/src/engineResources/TypeFormat.properties
+++ b/src/engineResources/TypeFormat.properties
@@ -82,6 +82,9 @@ TriggerByCollision=StringToken,IntegerToken,IntegerToken,IntegerToken
 TriggerByTileCollision=StringToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken,IntegerToken
 EventLevelDone=StringToken
 EventEnemyShower=StringToken,IntegerToken,IntegerToken,IntegerToken
+EventChangeBlood=StringToken,IntegerToken,IntegerToken
+EventChangeLive=StringToken,IntegerToken,IntegerToken
+EventLostGame=StringToken
 #
 # Managers
 #
