--- a/src/engineResources/ObjectBehaviors.properties
+++ b/src/engineResources/ObjectBehaviors.properties
@@ -49,3 +49,6 @@ TriggerByRemove=behaviors.TriggerByRemove
 # 
 EventEnemyShower=behaviors.EventEnemyShower
 EventLevelDone=behaviors.EventLevelDone
+EventChangeBlood=behaviors.EventChangeBlood
+EventChangeLive=behaviors.EventChangeLive
+EventLoseGame=behaviors.EventLostGame
