--- a/src/engineResources/MethodMatcher.properties
+++ b/src/engineResources/MethodMatcher.properties
@@ -89,4 +89,7 @@ TriggerByCollision=setEventOrTriggerBehavior
 TriggerByTileCollision=setEventOrTriggerBehavior
 EventLevelDone=setEventOrTriggerBehavior
 EventEnemyShower=setEventOrTriggerBehavior
+EventChangeBlood=setEventOrTriggerBehavior
+EventChangeLive=setEventOrTriggerBehavior
+EventLostGame=setEventOrTriggerBehavior
 SetInitialScene=setInitialScene
